--- a/.github/workflows/deploy-functions.yml
+++ b/.github/workflows/deploy-functions.yml
@@ -15,12 +15,11 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: '18'
-          cache: 'npm'
 
       - name: Install Supabase CLI
-        run: |
-          curl -fsSL https://cli.supabase.com/install | sh
-          echo "$HOME/.supabase/bin" >> $GITHUB_PATH
+        uses: supabase/setup-cli@v1
+        with:
+          version: 'latest'
 
       - name: Verify Supabase CLI Installation
         run: supabase --version
