--- a/.github/workflows/deploy-functions.yml
+++ b/.github/workflows/deploy-functions.yml
@@ -27,4 +27,4 @@ jobs:
       - name: Deploy Functions
         env:
           SUPABASE_ACCESS_TOKEN: ${{ secrets.SUPABASE_ACCESS_TOKEN }}
-        run: supabase functions deploy --project-ref dvplamwokfwyvuaskgyk --all
+        run: supabase functions deploy --project-ref dvplamwokfwyvuaskgyk
